terraform-eks/postgres-service-k8s.tf
resource "kubernetes_service_v1" "postgres" {
  metadata {
    name = "postgres"
  }

  spec {
    selector = {
      app = "postgres"
    }

    port {
      port        = 5432
      target_port = 5432
    }
  }
}
